--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -34,7 +34,29 @@
     background-repeat: no-repeat;
   }
 }
-/* fade anima tion */
+/* place animation */
+@keyframes place-up{
+  from{
+    transform: translateY(40px);
+  }
+  to{
+    transform: translateY(0px);
+  }
+}
+@keyframes cloud-animation{
+  0% {
+    transform:translateX(-300px);
+  }
+  50% {
+    transform:translateX(-150px);
+    z-index: -1;
+  }
+  100% {
+    transform:translateX(0px);
+    z-index: 2;
+  }
+}
+/* fade animation */
 @keyframes fade{
   0%{
     transform: translateY(120px);
@@ -141,25 +163,19 @@
   transform: translateY(0px);
 }
 /* place section animation */
-#place {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
-}
 #place div p {
   opacity: 0;
-  transform: translateY(-20px);
+  transform: translateY(-50px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
 #place h3 div{
   opacity: 0;
-  transform: translateY(105px);
+  transform: translateY(125px);
   color: #d4d95b;
   transition: all cubic-bezier(0.2, 1, 0.3, 1) 3s 1s;
 }
 #place.place-transition {
-  opacity: 1;
-  transform: translateY(0px);
+  animation: place-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
 }
 #place.place-transition h3 div{
   opacity: 1;
@@ -290,11 +306,9 @@ bottom:320px;
 filter:blur(10px);
 position: relative;
 z-index: 2;
-transform:translateX(-300px);
-transition: transform linear 3s;
 }
-.story #place .big-cloud.place-transition-cloud{
-  transform:translateX(0px);
+.story #place .big-cloud.place-animation-cloud{
+  animation: cloud-animation linear 3s forwards;
 }
 .story #place .little-cloud{
   background: url('/koukaki/wp-content/themes/foce-child/images/little_cloud.png');
@@ -305,11 +319,9 @@ transition: transform linear 3s;
   filter: blur(8px);
   position: relative;
   z-index: -1;
-  transform:translateX(-300px);
-  transition: transform linear 3s;
 }
-.story #place .little-cloud.place-transition-cloud{
-  transform:translateX(0px);
+.story #place .little-cloud.place-animation-cloud{
+ animation: cloud-animation linear 3s forwards;
 }
 @media(max-width:699px){
   .banner img {
