--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -85,19 +85,24 @@
 /* wave title animation */
 @keyframes move_wave {
   0%, 50%, 100% {
-      transform: translate(0, 0);
+      left: 0%;
+      top: 0%;
   }
   20% {
-      transform: translate(5%, 5%);
+    left: 5%;
+    top: 5%;
   }
   40% {
-    transform: translate(-5%, 5%);
+    left: -5%;
+    top: 5%;
   }
   60% {
-    transform: translate(5%, -5%);
+    left: 5%;
+    top: -5%;
   }
   80% {
-      transform: translate(-5%, -5%);
+    left: -5%;
+    top: -5%;
   }
 }
 /* floating animation */
@@ -131,7 +136,9 @@
   z-index: 1;
 }
 .banner video{
-  position: absolute; 
+  position: absolute;
+  object-fit: cover;
+  overflow: hidden;
 }
 /* story section animation */
 .story h2 {
