--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -76,15 +76,26 @@
     }
   }
  /* wave title animation */
-@keyframes move_wave {
+ @keyframes move_wave {
     0%, 50%, 100% {
-        transform: translateY(0);
+        left: 0%;
+        top: 0%;
     }
-    25% {
-        transform: translateY(15%);
+    20% {
+      left: 5%;
+      top: 5%;
     }
-    75% {
-        transform: translateY(-15%);
+    40% {
+      left: -5%;
+      top: 5%;
+    }
+    60% {
+      left: 5%;
+      top: -5%;
+    }
+    80% {
+      left: -5%;
+      top: -5%;
     }
   }
   /* floating animation */
