--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -49,7 +49,7 @@
   }
   100% {
     transform:translateX(0px);
-    z-index: 1;
+    z-index: 0;
   }
 }
 /* fade animation */
@@ -177,7 +177,7 @@
 .story #place h3{
   position: relative;
   top: 80px;
-  left: 50px;
+  left: 70px;
 }
 .story #place h3 div{
   opacity: 0;
@@ -188,11 +188,11 @@
 .story #place > div p {
   position: relative;
   top: 100px;
-  left: 0px;
   padding-left: 10em;
   opacity: 0;
   transform: translateY(-50px);
   transition: transform cubic-bezier(0.2, 1, 0.3, 1) 3s;
+  z-index: 1;
 }
 .story #place.place-transition {
   animation: place-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
@@ -515,5 +515,12 @@ z-index: 2;
   .story #characters h3{
     position:relative;
     right:0%;
+  }
+  /* nomination section */
+  #colophon #festival article{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
