Correction de la section lieu sur la position du titre avec un petit déplacement

--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -188,6 +188,7 @@
 .story #place > div p {
   position: relative;
   top: 100px;
+  right:15px;
   padding-left: 10em;
   opacity: 0;
   transform: translateY(-50px);
