--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -199,7 +199,7 @@ $color_2: #FFF5E9;
             p{
                 position: relative;
                 top: 100px;
-                left: 0px;
+                right: 15px;
                 padding-left: 10em;
                 opacity: 0;
                 transform: translateY(-50px);
