--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -365,7 +365,7 @@ z-index: 2;
   .main-navigation.toggled .nav-menu{
     height:100vh;
     width: 100vw;
-    animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s;
+    animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
   }
   .main-navigation.toggled button .line{
     color: black;
@@ -397,7 +397,7 @@ z-index: 2;
     width:30%;
     position: absolute;
     right:0px;
-    top:50px;
+    top:0px;
   }
   .main-navigation .left-animation-burger.menu-toggle{
     width: 30%;
