--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -63,6 +63,14 @@
      transform: rotate(359deg);
     }
  }
+ @keyframes flower-article-rotation-super-speed{
+    from{
+     transform: rotate(0turn);
+    }
+    to{
+     transform: rotate(5turn);
+    }
+  }
  @keyframes flower-article-up{
     from{
       top:120px;
@@ -154,6 +162,9 @@
         }
         &.story-animation-article::after{
             animation: flower-article-rotation linear 20s infinite, flower-article-up cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+        }
+        &.story-animation-flower-super-speed::after{
+            animation: flower-article-rotation-super-speed infinite 8s linear;
         }
     }
 }
