--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -168,6 +168,9 @@
 .story__article.story-animation-article::after {
   animation: flower-article-rotation linear 20s infinite, flower-article-up cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
+.story__article.story-animation-flower::after{
+  animation: flower-article-rotation linear 20s infinite;
+}
 .story__article.story-animation-flower-super-speed::after{
   animation: flower-article-rotation-super-speed infinite 8s linear;
 }
