--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -163,6 +163,9 @@
         &.story-animation-article::after{
             animation: flower-article-rotation linear 20s infinite, flower-article-up cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
         }
+        &.story-animation-flower{
+            animation: flower-article-rotation linear 20s infinite;
+        }
         &.story-animation-flower-super-speed::after{
             animation: flower-article-rotation-super-speed infinite 8s linear;
         }
