--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -21,7 +21,7 @@
     transform: translateY(-50px);
   }
   100% {
-    transform: translateY(0%);
+    transform: translateY(40px);
   }
 }
 @keyframes banner-background-down {
@@ -61,16 +61,24 @@
     transform: translateY(0px);
   }
 }
+@keyframes fade-flower{
+  0%{
+    top :120px;
+  }
+  100%{
+    top: 0px;
+  }
+}
 /* flower animation */
 @keyframes flower-article-rotation{
   from{
-   transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to{
-   transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
-@keyframes flower-article-rotation-super-speed{
+@keyframes flower-rotation-super-speed{
   from{
    transform: rotate(0turn);
   }
@@ -153,14 +161,20 @@
   transform: translateY(125px);
   transition: all cubic-bezier(0.2, 1, 0.3, 1) 3s 1s;
 }
-.story .story-animation{
-  width:100%;
-  animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+.story > h2.story-animation::after{
+  animation: flower-article-rotation linear 20s infinite;
+}
+.story > h2.animation-flower-super-speed::after{
+  animation: flower-rotation-super-speed infinite 8s linear;
 }
 .story .story-transition div{
   opacity: 1;
   transform: translateY(0px);
   width: 100%;
+}
+.story .story-animation{
+  width:100%;
+  animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
 .story__article.story-animation-article::before {
   animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
@@ -171,8 +185,8 @@
 .story__article.story-animation-flower::after{
   animation: flower-article-rotation linear 20s infinite;
 }
-.story__article.story-animation-flower-super-speed::after{
-  animation: flower-article-rotation-super-speed infinite 8s linear;
+.story__article.animation-flower-super-speed::after{
+  animation: flower-rotation-super-speed infinite 8s linear;
 }
 /* characters section animation */
 #characters h3 div{
@@ -183,17 +197,17 @@
 #characters.characters-animation {
   animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
-#characters.characters-transition h3 div{
+#characters.characters-transition h3 div {
   opacity: 1;
   transform: translateY(0px);
 }
 /* place section animation */
-.story #place h3{
+.story #place h3 {
   position: relative;
   top: 80px;
   left: 50px;
 }
-.story #place h3 div{
+.story #place h3 div {
   opacity: 0;
   transform: translateY(125px);
   color: #d4d95b;
@@ -228,21 +242,32 @@
   justify-content: center;
   background-color: transparent;
 }
-#studio h2 .title-left{
+#studio h2 .title-left {
   opacity: 0;
   transform: translateY(125px);
   transition: all cubic-bezier(0.2, 1, 0.3, 1) 3s 1s;
 }
-#studio h2 .title-right{
+#studio h2 .title-right {
   opacity: 0;
   transform: translateY(125px);
   transition: all cubic-bezier(0.2, 1, 0.3, 1) 3s 1.1s;
 }
-
+#studio > h2.studio-animation::before {
+  animation: flower-article-rotation linear 20s infinite;
+}
+#studio > h2.animation-flower-super-speed::before{
+  animation: flower-rotation-super-speed infinite 8s linear;
+}
+#studio > h2.studio-animation::after {
+    animation: flower-article-rotation linear 20s infinite;
+}
+#studio > h2.animation-flower-super-speed::after{
+  animation: flower-rotation-super-speed infinite 8s linear;
+}
 #studio .studio-animation{
   animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
-#studio .studio-transition div{
+#studio .studio-transition div {
   opacity: 1;
   transform: translateY(0px);
 }
@@ -250,14 +275,23 @@
   animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
 /* footer section animation */
-.site-footer.footer-animation::before{
-  animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+.site-footer.footer-animation::before {
+  animation: flower-article-rotation linear 20s infinite, fade-flower cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
 }
-.site-footer.footer-animation::after{
-  animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+.site-footer.animation-flower-super-speed::before{
+  animation: flower-rotation-super-speed infinite 8s linear;
 }
-.site-footer ul.footer-animation-flower::after{
-  animation: fade cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+.site-footer.footer-animation::after {
+  animation: flower-article-rotation linear 20s infinite, fade-flower cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+}
+.site-footer.animation-flower-super-speed::after{
+  animation: flower-rotation-super-speed infinite 8s linear;
+}
+.site-footer ul.footer-animation-flower::after {
+  animation: flower-article-rotation linear 20s infinite;
+}
+.site-footer ul.animation-flower-super-speed::after{
+  animation: flower-rotation-super-speed infinite 8s linear;
 }
 /* nomination section */
 #colophon {
@@ -266,23 +300,23 @@
   align-items: center;
   padding-top: 9em;
 }
-#colophon img{
+#colophon img {
   margin-top:52px;
   height:129px;
   width:278px;
 }
-#colophon ul{
+#colophon ul {
   padding-top: 18em;
 }
-#colophon::after{
+#colophon::after {
   bottom: 45em;
 }
-#colophon section article{
+#colophon section article {
   display:flex;
   flex-direction: row;
   justify-content: space-around;
 }
-#colophon .nomination{
+#colophon .nomination { 
   padding-left:30px;
   padding-right:50px;
   padding-top: 30px;
@@ -290,7 +324,7 @@
   background-image: url("/koukaki/wp-content/themes/foce-child/images/Rectangle 23");
   background-repeat: no-repeat;
 }
-#colophon .nomination p:first-child{
+#colophon .nomination p:first-child {
   height:187px;
   width:663px;
   font-family: 'Quicksand', sans-serif;
@@ -313,7 +347,7 @@
   z-index:1;
   display: block;
 }
-.story #characters .swiper .swiper-wrapper{
+.story #characters .swiper .swiper-wrapper {
   display:flex;
 }
 .story #characters .swiper-slide {
@@ -332,12 +366,12 @@
   width: 480px;
   overflow: clip;
 }
-.story #characters .swiper-slide figure img.attachment-full.size-full.wp-post-image{
+.story #characters .swiper-slide figure img.attachment-full.size-full.wp-post-image {
   max-width: none;
 }
 
 /* cloud animation */
-.story #place{
+.story #place {
   background: url('/koukaki/wp-content/themes/foce-child/images/Studio_Koukaki-image_place.png');
 }
 .story #place .big-cloud{
@@ -350,7 +384,7 @@ filter:blur(10px);
 position: relative;
 z-index: 2;
 }
-.story #place .big-cloud.place-animation-cloud{
+.story #place .big-cloud.place-animation-cloud {
   animation: cloud-animation linear 3s forwards;
 }
 .story #place .little-cloud{
@@ -363,7 +397,7 @@ z-index: 2;
   position: relative;
   z-index: -1;
 }
-.story #place .little-cloud.place-animation-cloud{
+.story #place .little-cloud.place-animation-cloud {
  animation: cloud-animation linear 3s forwards;
 }
 @media(max-width:699px){
@@ -388,7 +422,7 @@ z-index: 2;
   .main-navigation .burger-title.menu-toggle{
       position: absolute;
       top:5px;
-      margin-left:25%;
+      margin-left:40%;
   }
   .main-navigation button{
     margin:0px;
@@ -537,5 +571,176 @@ z-index: 2;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+}
+@media screen and (min-width: 700px){
+  .menu-toggle {
+    display: block;
+  }
+  .main-navigation{
+    height: 80px;
+  }
+  .main-navigation ul{
+    display: none;
+  }
+  .main-navigation ul .site-title{
+    display: none;
+  }
+  /* burger animation */
+  .main-navigation.toggled .nav-menu{
+    height:100vh;
+    animation: burger-down cubic-bezier(0.2, 1, 0.3, 1) 3s forwards;
+  }
+  .main-navigation.toggled button .line{
+    color: grey;
+    background-color: transparent;
+    font-size: 28px;
+    position: relative;
+    bottom:10px;
+  }
+  .main-navigation .burger-title.menu-toggle{
+      position: absolute;
+      top:20px;
+      margin-left:40%;
+  }
+  .main-navigation button{
+    margin:0px;
+    top:20px;
+    position: relative;
+    left:85%;
+  }
+  .main-navigation button .line{
+    color:transparent;
+    margin-block: 5px;
+    height: 2px;
+    background-color: grey;
+  }
+  .main-navigation .left-animation-burger{
+    display: flex;
+    flex-direction: column;
+    float:left;
+  }
+  .main-navigation .right-animation-burger{
+    display: flex;
+    flex-direction: column;
+  }
+  .main-navigation .right-animation-burger.menu-toggle{
+    width:30%;
+    position: absolute;
+    right:0px;
+    top:0px;
+  }
+  .main-navigation .left-animation-burger.menu-toggle{
+    width: 30%;
+    position: absolute;
+    left: 0px;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .orchid-burger{
+    width:84px;
+    height:84px;
+    background: url('../foce/assets/images/orchid.png');
+    background-position: 92% 50%;
+    background-size: cover;
+    position: relative;
+    right:25px;
+    top:30px;
+    animation: flower-article-rotation infinite linear 20s;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .cat1-burger{
+    width:65px;
+    height:65px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/cat.png');
+    background-size: cover;
+    position:relative;
+    left:60%;
+    bottom:10px;
+    animation: floating infinite linear 3s;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .flower-burger{
+    width:35px;
+    height:35px;
+    background: url('../foce/assets/images/flower.png');
+    background-size: cover;
+    position:relative;
+    left:50%;
+    top:100px;
+    animation: flower-article-rotation infinite linear 20s;
+  }
+  .main-navigation .left-animation-burger.menu-toggle .cat2-burger{
+    width:55px;
+    height:45px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/cat2.png');
+    background-size: cover;
+    position: relative;
+    top:210px;
+    left:15%;
+    animation: floating infinite linear 3s 1s;
+  }
+  .main-navigation .right-animation-burger.menu-toggle .sunflower-burger{
+    width:108px;
+    height:108px;
+    background: url('../foce/assets/images/sunflower.png');
+    background-size: cover;
+    animation: flower-article-rotation infinite linear 20s;
+  }
+
+  .main-navigation .right-animation-burger.menu-toggle .randomflower-burger{
+    width:37px;
+    height:37px;
+    background: url('../foce/assets/images/random_flower.png');
+    background-size: cover;
+    position: relative;
+    bottom:35px;
+    left:90%;
+    animation: flower-article-rotation infinite linear 20s;
+  }
+  .main-navigation .right-animation-burger.menu-toggle .cat3-burger{
+    width:75px;
+    height:75px;
+    background: url('/koukaki/wp-content/themes/foce-child/images/Group 180.png');
+    background-size: cover;
+    position: relative;
+    top: 120px;
+    animation: floating infinite linear 3s 2s;
+  }
+  .main-navigation .right-animation-burger.menu-toggle .hibiscusfooter-burger{
+    width:200px;
+    height:200px;
+    background: url('/koukaki/wp-content/themes/foce/assets/images/hibiscus_footer.png');
+    background-size: cover;
+    position: relative;
+    top:110px;
+    left:50%;
+    animation: flower-article-rotation infinite linear 20s;
+  }
+  .main-navigation .img-title-burger.menu-toggle{
+    width:75px;
+    height:65px;
+    padding-top:10px;
+  }
+  .main-navigation ul{
+    width:100%;
+    padding-left: 0px;
+    background-color: #FFF5E9;
+  }
+  .main-navigation ul img{
+    margin: auto;
+  }
+  .main-navigation ul .footer-burger-menu.menu-toggle{
+    margin-top:50px;
+    text-align: center;
+    font-size: x-small;
+  }
+  .main-navigation ul li a{
+    font-weight: 400;
+    font-size: 2em;
+    font-family: 'Roboto Mono', monospace;
+    line-height: 84px;
+    text-align: center;
+    animation: title-up cubic-bezier(0.2, 1, 0.3, 1) 3s;
+  }
+  .main-navigation ul li a:hover{
+    text-shadow: #ff5c00 -1px 0 5px;
+    color: black;
   }
 }
