Correction sur la taille de la fleur blanche de la section histoire pour que la fleur tourne parfaitement sur elle même

--- a/foce-child/style.css
+++ b/foce-child/style.css
@@ -156,6 +156,10 @@
 .story h2 {
   background-color: transparent;
 }
+.story h2::after{
+  width: 155px;
+  height: 155px;
+}
 .story h2 div{
   opacity: 0;
   transform: translateY(125px);
