--- a/foce-child/style.scss
+++ b/foce-child/style.scss
@@ -268,6 +268,14 @@ $color_2: #FFF5E9;
         flex-direction: row;
         justify-content: center;
         background-color: transparent;
+        &::after{
+            width: 110px;
+            height: 110px;
+        }
+        &::before{
+            width: 200px;
+            height: 200px;
+        }
         .title-left{
             opacity: 0;
             transform: translateY(125px);
